--- a/_includes/themes/metro/default.html
+++ b/_includes/themes/metro/default.html
@@ -6,40 +6,24 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>{{ page.title }}</title>
+	<title>{{ site.title }} - {{ page.title }}</title>
 	<meta name="author" content="{{ site.author.name }}">
-	<link href='{{ ASSET_PATH }}/css/style.css' rel="stylesheet" media="all">
-	<link href="http://feeds.feedburner.com/{{ site.author.feedbaname }}" rel="alternate" title="{{ page.title }}" type="application/atom+xml">
+	<link href='{{ ASSET_PATH }}/css/metro.blue.css' rel="stylesheet" media="all">
+	<link href='{{ ASSET_PATH }}/css/metro.theme.css' rel="stylesheet" media="all">
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
 </head>
 <body>
-
-<div id="page" class="hentry">
-	<header class="the-header">
-		<div class="unit-head">
-			<div class="unit-inner unit-head-inner">
-				<p class="logo"><a href="{{ HOME_PATH }}">{{ site.title }}</a></p>
-				<nav class="nav-global">
-					<ul>
-						<li class="archive"><a href="/archive.html">archive</a></li>
-						<li class="page"><a href="/pages.html">pages</a></li>
-						<li class="category"><a href="/categories.html">categories</a></li>
-						<li class="tag"><a href="/tags.html">tags</a></li>
-						<li class="forkme"><iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=plusjade&repo=jekyll-bootstrap&type=fork&count=true"
-								allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe></li>
-					</ul>
-				</nav>
-			</div><!-- unit-inner -->
-		</div><!-- unit-head -->
-	</header>
-	<div class="body" role="main">
-		<div class="unit-body">
-			<div class="unit-inner unit-body-inner">
-				<div class="entry-content">
-					{{ content }}
-				</div>
-			</div><!-- unit-inner -->
-		</div><!-- unit-body -->
+	<div id="sidebar">
+		<h1 id="site-title"><a href="{{ HOME_PATH }}">{{ site.formatted_title.normal }}<em>{{ site.formatted_title.em }}</em></a></h1>
+		<nav class="tiles">
+			<ul class="tilerow">
+				<li><a class="tile one bluebg" href="/archive.html"><h3>archive</h3></a></li>
+				<li><a class="tile one bluebg" href="/categories.html"><h3>categories</h3></a></li>
+			</ul>
+		</nav>
+	</div>
+	<div id="body" role="main">
+		{{ content }}
 	</div><!-- body -->
 	<footer class="the-footer">
 		<div class="unit-foot">
@@ -54,13 +38,14 @@
 					</ul>
 				</div><!-- misc -->
 				<p class="licence">
-					Theme: <a href="http://layouts-the.me">the_minimum</a> based on <a href="http://jekyllbootstrap.com/">Jekyll-bootstrap</a>.<br>
+					Theme: 'metro' based on <a href="http://layouts-the.me">the_minimum</a>.<br>
 					Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>.
 				</p>
 			</div><!-- unit-foot-inner -->
 		</div><!-- unit-foot -->
 	</footer>
-</div><!-- page -->
+
+</div><!-- container-fluid  -->
 <script>
 	(function(d, s) {
 		var js, fjs = d.getElementsByTagName(s)[0], load = function(url, id) {
