--- a/assets/themes/metro/css/metro.theme.css
+++ b/assets/themes/metro/css/metro.theme.css
@@ -22,21 +22,30 @@ div#sidebar {
 div#body {
 	position: fixed;
 	top: 0;
-	bottom: 50px
+	bottom: 0;
 	right: 0;
-	left: 325px;
-	width: 100%;
+	left: 0;
 	height: 100%;
 	padding: 2em;
+	overflow: auto;
+	margin-left: 325px;
 }
 
-footer {
-	position: fixed;
-	bottom: 0;
-	left: 325px;
-	right: 0;
-	height: 50px;
+div.social { margin-top: 0.25em; }
+pre code { border: none; }
+
+.linear { display: inline; }
+
+ul.list-linear {
+	display: inline;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
 }
+
+	ul.list-linear li {
+		display: inline;
+	}
 
 nav {
 }
