Removed test post, updated sidebar

--- a/_includes/themes/metro/default.html
+++ b/_includes/themes/metro/default.html
@@ -20,6 +20,8 @@
 			<ul class="tilerow">
 				<li><a class="tile one bluebg" href="/"><h3>home</h3></a></li>
 				<li><a class="tile one tealbg" href="/talks.html"><h3>talks</h3></a></li>
+				<li><a class="tile one redbg" href="http://feeds.feedburner.com/Vibrantcode"><h3>rss</h3></a></li>
+				<li><a class="tile one bluebg" href="http://twitter.com/anurse"><h3>twitter</h3></a></li>
 			</ul>
 		</nav>
 		<div id="about-me">
