--- a/assets/themes/metro/css/metro.theme.css
+++ b/assets/themes/metro/css/metro.theme.css
@@ -135,6 +135,8 @@ nav {
 }
 
 @media only screen and (max-width: 480px) {
+	div.post-body { line-height: 1.5em; }
+
 	div#sidebar {
 		position: static;
 		padding: 0;
@@ -187,4 +189,8 @@ nav {
 			nav ul li h3 {
 				display: inline;
 			}
+}
+
+@media only screen and (max-width: 320px) {
+	.optional { display:none; }
 }
