--- a/assets/themes/metro/css/metro.theme.css
+++ b/assets/themes/metro/css/metro.theme.css
@@ -136,6 +136,7 @@ nav {
 
 @media only screen and (max-width: 480px) {
 	div.post-body { line-height: 1.5em; }
+	div.post-body h3 { line-height: 1.5em; }
 
 	div#sidebar {
 		position: static;
