Added IE rotation support.

--- a/assets/themes/metro/css/metro.theme.css
+++ b/assets/themes/metro/css/metro.theme.css
@@ -102,6 +102,7 @@ nav {
 		-webkit-transform:rotate(90deg);
 		-moz-transform:rotate(90deg);
 		-o-transform: rotate(90deg);
+		filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
 		width: 50px;
 	}
 
