Added password hasher (it won't let you see my passwords, nice try!)

--- a/assets/themes/metro/css/metro.theme.css
+++ b/assets/themes/metro/css/metro.theme.css
@@ -1,5 +1,6 @@
 body {
 	padding-bottom: 20px;
+	font-family:"Segoe UI","Segoe WP","Helvetica Neue",'RobotoRegular',sans-serif;
 }
 
 code { padding-left: 0; }
@@ -96,6 +97,53 @@ nav {
 				color: #f09609;
 			}
 
+form ul {
+	margin: 0;
+	padding: 0;
+}
+
+	form ul li {
+		list-style-type: none;
+	}
+
+	form ul.buttonset li {
+		display: inline;
+	}
+
+	form ul#sizelist li {
+		display: inline-block;
+		margin: 0.25em;
+	}
+
+form input[type='text'], form input[type='password'] {
+	font-family:"Segoe UI","Segoe WP","Helvetica Neue",'RobotoRegular',sans-serif;
+	font-size: 20pt;
+	width: 100%;
+}
+
+form fieldset {
+	border: none;
+	margin: 0;
+	padding: 0;
+}
+
+/* jQuery UI Overrides */
+.ui-state-default { background: none; border: solid 2px black; color: black; font-weight: normal; }
+.ui-state-active { background-color: #1ba1e2; color: white; }
+.ui-state-hover { background-color: #f09609; color: white; }
+
+.ui-buttonset .ui-button { margin-right: -0.4em;}
+
+/* Corner radius */
+.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 0; -webkit-border-top-left-radius: 0; -khtml-border-top-left-radius: 0; border-top-left-radius: 0; }
+.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 0; -webkit-border-top-right-radius: 0; -khtml-border-top-right-radius: 0; border-top-right-radius: 0; }
+.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 0; -webkit-border-bottom-left-radius: 0; -khtml-border-bottom-left-radius: 0; border-bottom-left-radius: 0; }
+.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 0; -webkit-border-bottom-right-radius: 0; -khtml-border-bottom-right-radius: 0; border-bottom-right-radius: 0; }
+
+.lg-button { width: 100%; font-size: 16pt; margin-top: 0.5em; }
+.med-button { width: 120px; }
+.sm-button { width: 60px; }
+
 /* iPad */
 @media only screen and (max-width: 1024px) {
 	h1#site-title {
@@ -135,6 +183,10 @@ nav {
 }
 
 @media only screen and (max-width: 480px) {
+	form {
+		text-align: center;
+	}
+
 	div.post-body { line-height: 1.5em; }
 	div.post-body h3 { line-height: 1.5em; }
 
