--- a/_includes/themes/metro/default.html
+++ b/_includes/themes/metro/default.html
@@ -8,10 +8,14 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>{{ site.title }} - {{ page.title }}</title>
 	<meta name="author" content="{{ site.author.name }}">
+	<link href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.19/themes/excite-bike/jquery-ui.css" rel="stylesheet" media="all" />
 	<link href='{{ ASSET_PATH }}/css/metro.blue.css' rel="stylesheet" media="all">
 	<link href='{{ ASSET_PATH }}/css/metro.theme.css' rel="stylesheet" media="all">
 	<link href='{{ ASSET_PATH }}/css/code.css' rel="stylesheet" media="all">
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
+	<script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.7.2.min.js"></script>
+	<script src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.19/jquery-ui.js"></script>
+	<script src="{{ ASSET_PATH }}/js/attachr.js"></script>
 </head>
 <body>
 	<div id="sidebar">
