--- a/_includes/themes/metro/default.html
+++ b/_includes/themes/metro/default.html
@@ -20,17 +20,27 @@
 <body>
 	<div id="sidebar">
 		<h1 id="site-title"><a href="{{ HOME_PATH }}">{{ site.formatted_title.normal }}<em>{{ site.formatted_title.em }}</em></a></h1>
+		<h1 id="site-title-mini"><a href="{{ HOME_PATH }}">{{ site.small_title.normal }}<em>{{ site.small_title.em }}</em></a></h1>
 		<nav class="tiles">
 			<ul class="tilerow">
-				<li><a class="tile one bluebg" href="/"><h3>home</h3></a></li>
-				<li><a class="tile one tealbg" href="/talks.html"><h3>talks</h3></a></li>
-				<li><a class="tile one redbg optional" href="http://feeds.feedburner.com/Vibrantcode"><h3>rss</h3></a></li>
-				<li><a class="tile one bluebg optional" href="http://twitter.com/anurse"><h3>twitter</h3></a></li>
+				<li><a class="tile one bluebg" href="/" title="home">
+					<img src="/assets/img/home.png" class="sizefix marginfix" alt="home" />
+				</a></li>
+				<li><a class="tile one tealbg" href="/talks.html" title="talks">
+					<img src="/assets/img/talks.png" class="sizefix marginfix" alt="talks" />
+				</a></li>
+				<li><a class="tile one redbg optional" href="http://feeds.feedburner.com/Vibrantcode" title="rss">
+					<img src="/assets/img/rss.png" class="sizefix" alt="rss" />
+				</a></li>
+				<li><a class="tile one bluebg optional" href="http://twitter.com/anurse" title="twitter">
+					<img src="/assets/img/twitter.png" alt="twitter" />
+				</a></li>
 			</ul>
 		</nav>
 		<div id="about-me">
 			<img class="float-img" src="http://en.gravatar.com/userimage/3233983/90e37182b8e12d1762a501c23ce097f9.jpg?size=100" />
-			I'm Andrew. I write code for Microsoft and do web stuff. Want to know more? Read this blog!
+			I'm Andrew. I write code for Microsoft and do web stuff. Want to know more?
+			Check out the <a href="/about.html">About</a> page!
 		</div>
 	</div>
 	<div id="body" role="main">
