--- a/assets/themes/metro/css/metro.theme.css
+++ b/assets/themes/metro/css/metro.theme.css
@@ -10,7 +10,9 @@ h1#site-title {
 	font-weight: normal;
 }
 
-h1#site-title em { 
+h1#site-title-mini { display: none; }
+
+h1#site-title em, h1#site-title-mini em { 
 	font-style: normal;
 	color: #393; 
 }
@@ -57,6 +59,8 @@ div.social { margin-top: 0.25em; }
 pre code { border: none; }
 
 .linear { display: inline; }
+
+section { clear: both; }
 
 ul.list-linear {
 	display: inline;
@@ -144,6 +148,31 @@ form fieldset {
 .med-button { width: 120px; }
 .sm-button { width: 60px; }
 
+img.sizefix {
+	width: 100px;
+	margin-top: 15px;
+}
+img.marginfix {
+	margin-top: 25px;
+}
+
+/* Height constrained */
+@media only screen and (max-height: 512px) {
+	#about-me { display: none; }
+	.tile.one {
+		width: 60px;
+		height: 60px;
+	}
+
+	img.sizefix {
+		width: 48px;
+		margin-top: 7px;
+	}
+	img.marginfix {
+		margin-top: 10px;
+	}
+}
+
 /* iPad */
 @media only screen and (max-width: 1024px) {
 	h1#site-title {
@@ -180,12 +209,32 @@ form fieldset {
 	}
 
 	div#about-me { display: none; }
+
+	img.sizefix {
+		width: 32px;
+		margin-top: 0;
+	}
+	img.marginfix {
+		margin-top: 2px;
+	}
+}
+
+@media only screen and (max-height: 553px) and (max-width: 1024px) {
+	h1#site-title { display: none; }
+	h1#site-title-mini { display: inline; }
+}
+
+@media only screen and (max-height: 512px) and (max-width: 1024px) {
+	#about-me { display: none; }
 }
 
 @media only screen and (max-width: 480px) {
 	form {
 		text-align: center;
 	}
+
+	h1#site-title-mini { display: none; }
+	h1#site-title { display: inline; }
 
 	div.post-body { line-height: 1.5em; }
 	div.post-body h3 { line-height: 1.5em; }
@@ -239,9 +288,28 @@ form fieldset {
 			display: inline;
 		}
 
-			nav ul li h3 {
-				display: inline;
+			nav ul li a {
+				width: 32px;
+				height: 32px;
+				display: inline-block;
 			}
+
+			nav ul li a img, img.sizefix, img.marginfix {
+				width: 30px;
+			}
+
+			nav ul li h3 {
+				visibility: collapse;
+				display: none;
+			}
+
+	img.sizefix {
+		margin-bottom: -1px;
+	}
+
+	img.marginfix {
+		padding-bottom: 2px;
+	}
 }
 
 @media only screen and (max-width: 320px) {
