Added OpenGraph metadata

--- a/_includes/themes/metro/default.html
+++ b/_includes/themes/metro/default.html
@@ -9,6 +9,9 @@
 	<title>{{ site.title }} - {{ page.title }}</title>
 	<meta name="author" content="{{ site.author.name }}">
 	<link href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.19/themes/excite-bike/jquery-ui.css" rel="stylesheet" media="all" />
+	<meta name="og:image" content="{{ BASE_PATH}}/assets/img/ogicon.png" />
+	<meta name="og:title" content="{{ page.title }}" />
+	<meta name="og:site_name" content="VibrantCode" />
 	<link href='{{ ASSET_PATH }}/css/metro.blue.css' rel="stylesheet" media="all">
 	<link href='{{ ASSET_PATH }}/css/metro.theme.css' rel="stylesheet" media="all">
 	<link href='{{ ASSET_PATH }}/css/code.css' rel="stylesheet" media="all">
